# lipa_trust_system

./: .env  .env.example  .gitignore  README.md  init_db.sql  main.py  netlify.toml  pyproject.toml  pytest.ini
api/routes/: auth.py  campaigns.py  contributions.py
api/routes/admin/: __init__.py  campaigns.py  refunds.py
backend/: .env.example  README.md  create_tables.py  main.py  nixpacks.toml  postman_collection.json
backend/api/: deps.py
backend/api/routes/: auth.py  campaigns.py  contributions.py  payments.py
backend/core/: config.py  db.py
backend/modules/admin/: monitoring_service.py
backend/modules/campaigns/: service.py
backend/modules/contributions/: models.py  service.py
backend/schemas/: base.py  campaign.py  contribution.py
backend/workers/: disbursement_worker.py  refund_worker.py  retry_worker.py
core/: config.py  dependencies.py  security.py
domain/: enums.py
modules/admin/: __init__.py  refund_approval_service.py  surplus_admin_service.py  verification_service.py
modules/campaigns/: models.py  surplus_service.py
modules/contributions/: service.py
modules/disbursements/: models.py
modules/ledger/: models.py
modules/payments/: mpesa_client.py
modules/refunds/: models.py
schemas/: auth.py
schemas/admin/: __init__.py  campaign.py  refund.py
tests/: conftest.py
ui/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
ui/public/: _headers  site.webmanifest
ui/src/: App.jsx  styles.css
workers/: __init__.py  campaign_worker.py  disbursement_worker.py  reconciliation_worker.py
(+45 files in other folders)
